# bat-butterfly-optimizer

./: Cargo.toml  run_sweep.sh
.cargo/: config.toml
src/: bats.rs  butterflies.rs  functions.rs  lib.rs  main.rs  vector.rs
stat_collector/: Cargo.toml
stat_collector/src/: main.rs
