[package]
name = "swarm_optimizers"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["stat_collector"]


[dependencies]
rand = "0.8"
rand_distr = "0.4"
clap = { version = "4", features = ["derive"] }
num_cpus = "1"

[profile.release]
debug = true
lto = "fat" # Significantly slower linking but minor perf improvements
codegen-units = 1 # Significantly slower linking but minor perf improvements